# rusty_forecast

./: .gitignore  .prettierrc.json  Cargo.toml  dockerfile  dockerfile.alpine
docs/: HouseHub diagram (2).drawio  errors.txt  logs_today.txt  rusty_forecast.drawio  rusty_forecast_simple.drawio
src/: climacell.rs  forecast_db.rs  main.rs  weather.rs  web.rs  wunder.rs
src/climacell/: models.rs  moon_phase.rs  precipitation_type.rs  weather_code.rs  webmodels.rs
src/wunder/: models.rs
